--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -10,6 +10,13 @@
   margin-bottom: 1em;
 }
 
+.form-subtitle {
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
 .form-react-conductors {
   height: 380px;
   background-color: $blue-dark;
