--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -14,7 +14,7 @@
   font-size: 20px;
   font-weight: 500;
   text-align: center;
-  margin-bottom: 1em;
+  margin: 2em 0;
 }
 
 .form-react-conductors {
