--- a/app/views/hospitals/create.js.erb
+++ b/app/views/hospitals/create.js.erb
@@ -1,6 +1,7 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalHospital").hide();
+  document.getElementById("new_hospital").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.querySelector(".ppsp_hospital_id")) {
     document.querySelector(".ppsp_hospital_id").innerHTML = "<%= j(render 'form_field_hospital') %>";
