--- a/app/views/moas/create.js.erb
+++ b/app/views/moas/create.js.erb
@@ -1,6 +1,7 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalMoa").hide();
+  document.getElementById("new_moa").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.getElementById("ppsp_moa_id")) {
     document.getElementById("ppsp_moa_id").innerHTML = "<%= j(render 'form_field_moa') %>";
