--- a/app/views/pension_insurances/create.js.erb
+++ b/app/views/pension_insurances/create.js.erb
@@ -1,6 +1,7 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalPensionInsurance").hide();
+  document.getElementById("new_pension_insurance").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.getElementById("ppsp_pension_insurance_id")) {
     document.getElementById("ppsp_pension_insurance_id").innerHTML = "<%= j(render 'form_field_pension_insurance') %>";
