--- a/app/views/regional_committees/create.js.erb
+++ b/app/views/regional_committees/create.js.erb
@@ -1,6 +1,7 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalRegionalCommittee").hide();
+  document.getElementById("new_regional_committee").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.getElementById("ppsp_regional_committee_id")) {
     document.getElementById("ppsp_regional_committee_id").innerHTML = "<%= j(render 'form_field_regional_committee') %>";
