Clean the modals

--- a/app/views/anti_poisons/create.js.erb
+++ b/app/views/anti_poisons/create.js.erb
@@ -1,6 +1,7 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalAntiPoison").hide();
+  $(".fade.modal").hide();
   document.getElementById("new_anti_poison").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.querySelector(".ppsp_anti_poison_id")) {
