--- a/app/views/deminings/create.js.erb
+++ b/app/views/deminings/create.js.erb
@@ -1,6 +1,7 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalDemining").hide();
+  $(".fade.modal").hide();
   document.getElementById("new_demining").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.getElementById("ppsp_demining_id")) {
