--- a/app/views/moes/create.js.erb
+++ b/app/views/moes/create.js.erb
@@ -1,6 +1,7 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalMoe").hide();
+  $(".fade.modal").hide();
   document.getElementById("new_moe").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.getElementById("ppsp_moe_id")) {
