--- a/app/views/security_coordinators/create.js.erb
+++ b/app/views/security_coordinators/create.js.erb
@@ -1,6 +1,7 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalSecurityCoordinator").hide();
+  $(".fade.modal").hide();
   document.getElementById("new_security_coordinator").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.getElementById("ppsp_security_coordinator_id")) {
