--- a/app/views/sos_hands/create.js.erb
+++ b/app/views/sos_hands/create.js.erb
@@ -1,6 +1,7 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalSosHand").hide();
+  $(".fade.modal").hide();
   document.getElementById("new_sos_hand").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.getElementById("ppsp_sos_hand_id")) {
