--- a/app/views/workers/create.js.erb
+++ b/app/views/workers/create.js.erb
@@ -1,6 +1,8 @@
 $(document).ready(function() {
   $(".modal-backdrop").hide();
   $("#ModalWorker").hide();
+  $(".fade.modal").hide();
+  document.getElementById("new_worker").reset();
   $(".modal-open").css({overflow: 'scroll'});
   if (document.querySelector(".ppsp_worker_id")) {
     document.querySelector(".ppsp_worker_id").innerHTML = "<%= j(render 'form_field_worker') %>";
