Create a folder for the modals

--- a/app/views/anti_poisons/index.html.erb
+++ b/app/views/anti_poisons/index.html.erb
@@ -12,7 +12,7 @@
   <%# Modal Anti_Poison %>
   <% if policy(AntiPoison).new? %>
     <div class="modal fade" id="ModalAntiPoison" tabindex="-1" role="dialog" aria-labelledby="ModalAntiPoison" aria-hidden="true">
-      <%= render 'ppsps/modal_anti_poison' %>
+      <%= render 'modals/anti_poisons/modal_anti_poison' %>
     </div>
   <% end %>
   <div class="container-database">
