--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -48,7 +48,7 @@
       <div class="col-md-10 offset-md-1">
         <div id="react-render-subcontractors" data-admin=<%= "#{current_user.admin}" %> data-ppsps_id=<%="#{@ppsp.id}"%>></div>
       </div>
-      
+
       <h3 class="col-12 form-subtitle">
         Les correspondants
       </h3>
@@ -319,57 +319,57 @@
   <% end %>
   <% if policy(SecurityCoordinator).create? %>
     <div class="modal fade" id="ModalSecurityCoordinator" tabindex="-1" role="dialog" aria-labelledby="ModalSecurityCoordinator" aria-hidden="true">
-      <%= render 'ppsps/modal_security_coordinator' %>
+      <%= render 'modals/security_coordinators/modal_security_coordinator' %>
     </div>
   <% end %>
   <% if policy(Hospital).create? %>
     <div class="modal fade" id="ModalHospital" tabindex="-1" role="dialog" aria-labelledby="ModalHospital" aria-hidden="true">
-      <%= render 'ppsps/modal_hospital' %>
+      <%= render 'modals/hospitals/modal_hospital' %>
     </div>
   <% end %>
   <% if policy(Moa).create? %>
     <div class="modal fade" id="ModalMoa" tabindex="-1" role="dialog" aria-labelledby="ModalMoa" aria-hidden="true">
-      <%= render 'ppsps/modal_moa' %>
+      <%= render 'modals/moas/modal_moa' %>
     </div>
   <% end %>
   <% if policy(Moe).create? %>
     <div class="modal fade" id="ModalMoe" tabindex="-1" role="dialog" aria-labelledby="ModalMoe" aria-hidden="true">
-      <%= render 'ppsps/modal_moe' %>
+      <%= render 'modals/moes/modal_moe' %>
     </div>
   <% end %>
   <% if policy(Direcct).create? %>
     <div class="modal fade" id="ModalDirecct" tabindex="-1" role="dialog" aria-labelledby="ModalDirecct" aria-hidden="true">
-      <%= render 'ppsps/modal_direcct' %>
+      <%= render 'modals/direccts/modal_direcct' %>
     </div>
   <% end %>
   <% if policy(PensionInsurance).create? %>
     <div class="modal fade" id="ModalPensionInsurance" tabindex="-1" role="dialog" aria-labelledby="ModalPensionInsurance" aria-hidden="true">
-      <%= render 'ppsps/modal_pension_insurance' %>
+      <%= render 'modals/pension_insurances/modal_pension_insurance' %>
     </div>
   <% end %>
   <% if policy(RegionalCommittee).create? %>
     <div class="modal fade" id="ModalRegionalCommittee" tabindex="-1" role="dialog" aria-labelledby="ModalRegionalCommittee" aria-hidden="true">
-      <%= render 'ppsps/modal_regional_committee' %>
+      <%= render 'modals/regional_committees/modal_regional_committee' %>
     </div>
   <% end %>
   <% if policy(AntiPoison).create? %>
     <div class="modal fade" id="ModalAntiPoison" tabindex="-1" role="dialog" aria-labelledby="ModalAntiPoison" aria-hidden="true">
-      <%= render 'ppsps/modal_anti_poison' %>
+      <%= render 'modals/anti_poisons/modal_anti_poison' %>
     </div>
   <% end %>
   <% if policy(WorkMedecine).create? %>
     <div class="modal fade" id="ModalWorkMedecine" tabindex="-1" role="dialog" aria-labelledby="ModalWorkMedecine" aria-hidden="true">
-      <%= render 'ppsps/modal_work_medecine' %>
+      <%= render 'modals/work_medecines/modal_work_medecine' %>
     </div>
   <% end %>
   <% if policy(SosHand).create? %>
     <div class="modal fade" id="ModalSosHand" tabindex="-1" role="dialog" aria-labelledby="ModalSosHand" aria-hidden="true">
-      <%= render 'ppsps/modal_sos_hand' %>
+      <%= render 'modals/sos_hands/modal_sos_hand' %>
     </div>
   <% end %>
   <% if policy(Demining).create? %>
     <div class="modal fade" id="ModalDemining" tabindex="-1" role="dialog" aria-labelledby="ModalDemining" aria-hidden="true">
-      <%= render 'ppsps/modal_demining' %>
+      <%= render 'modals/deminings/modal_demining' %>
     </div>
   <% end %>
 </div>
