--- a/app/views/deminings/index.html.erb
+++ b/app/views/deminings/index.html.erb
@@ -12,7 +12,7 @@
   <%# Modal Demining %>
   <% if policy(Demining).new? %>
     <div class="modal fade" id="ModalDemining" tabindex="-1" role="dialog" aria-labelledby="ModalDemining" aria-hidden="true">
-      <%= render 'ppsps/modal_demining' %>
+      <%= render 'modals/deminings/modal_demining' %>
     </div>
   <% end %>
   <div class="container-database">
