--- a/app/views/direccts/index.html.erb
+++ b/app/views/direccts/index.html.erb
@@ -12,7 +12,7 @@
   <%# Modal Direcct %>
   <% if policy(Direcct).new? %>
     <div class="modal fade" id="ModalDirecct" tabindex="-1" role="dialog" aria-labelledby="ModalDirecct" aria-hidden="true">
-      <%= render 'ppsps/modal_direcct' %>
+      <%= render 'modals/direccts/modal_direcct' %>
     </div>
   <% end %>
   <div class="container-database">
