--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -12,7 +12,7 @@
   <%# Modal Hospital %>
   <% if policy(Hospital).new? %>
     <div class="modal fade" id="ModalHospital" tabindex="-1" role="dialog" aria-labelledby="ModalHospital" aria-hidden="true">
-      <%= render 'ppsps/modal_hospital' %>
+      <%= render 'modals/hospitals/modal_hospital' %>
     </div>
   <% end %>
   <div class="container-database">
