--- a/app/views/moas/index.html.erb
+++ b/app/views/moas/index.html.erb
@@ -12,7 +12,7 @@
   <%# Modal Moa %>
   <% if policy(Moa).new? %>
     <div class="modal fade" id="ModalMoa" tabindex="-1" role="dialog" aria-labelledby="ModalMoa" aria-hidden="true">
-      <%= render 'ppsps/modal_moa' %>
+      <%= render 'modals/moas/modal_moa' %>
     </div>
   <% end %>
   <div class="container-database">
