--- a/app/views/modals/anti_poisons/modal_anti_poison.js.erb
+++ b/app/views/modals/anti_poisons/modal_anti_poison.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("ModalAntiPoison").innerHTML = "<%= escape_javascript(render 'ppsps/modal_anti_poison') %>";
+document.getElementById("ModalAntiPoison").innerHTML = "<%= escape_javascript(render 'modals/anti_poisons/modal_anti_poison') %>";
