--- a/app/views/modals/deminings/modal_demining.js.erb
+++ b/app/views/modals/deminings/modal_demining.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("ModalDemining").innerHTML = "<%= escape_javascript(render 'ppsps/modal_demining') %>";
+document.getElementById("ModalDemining").innerHTML = "<%= escape_javascript(render 'modals/deminings/modal_demining') %>";
