--- a/app/views/modals/direccts/modal_direcct.js.erb
+++ b/app/views/modals/direccts/modal_direcct.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("ModalDirecct").innerHTML = "<%= escape_javascript(render 'ppsps/modal_direcct') %>";
+document.getElementById("ModalDirecct").innerHTML = "<%= escape_javascript(render 'modals/direccts/modal_direcct') %>";
