--- a/app/views/modals/hospitals/modal_hospital.js.erb
+++ b/app/views/modals/hospitals/modal_hospital.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("ModalHospital").innerHTML = "<%= escape_javascript(render 'ppsps/modal_hospital') %>";
+document.getElementById("ModalHospital").innerHTML = "<%= escape_javascript(render 'modals/hospitals/modal_hospital') %>";
