--- a/app/views/modals/moas/modal_moa.js.erb
+++ b/app/views/modals/moas/modal_moa.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("ModalMoa").innerHTML = "<%= escape_javascript(render 'ppsps/modal_moa') %>";
+document.getElementById("ModalMoa").innerHTML = "<%= escape_javascript(render 'modals/moas/modal_moa') %>";
