--- a/app/views/modals/moes/modal_moe.js.erb
+++ b/app/views/modals/moes/modal_moe.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("ModalMoe").innerHTML = "<%= escape_javascript(render 'ppsps/modal_moe') %>";
+document.getElementById("ModalMoe").innerHTML = "<%= escape_javascript(render 'modals/moes/modal_moe') %>";
