--- a/app/views/modals/sos_hands/modal_sos_hand.js.erb
+++ b/app/views/modals/sos_hands/modal_sos_hand.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("ModalSosHand").innerHTML = "<%= escape_javascript(render 'ppsps/modal_sos_hand') %>";
+document.getElementById("ModalSosHand").innerHTML = "<%= escape_javascript(render 'modals/sos_hands/modal_sos_hand') %>";
