--- a/app/views/moes/index.html.erb
+++ b/app/views/moes/index.html.erb
@@ -12,7 +12,7 @@
   <%# Modal Moa %>
   <% if policy(Moe).new? %>
     <div class="modal fade" id="ModalMoe" tabindex="-1" role="dialog" aria-labelledby="ModalMoe" aria-hidden="true">
-      <%= render 'ppsps/modal_moe' %>
+      <%= render 'modals/moes/modal_moe' %>
     </div>
   <% end %>
   <div class="container-database">
