--- a/app/views/sos_hands/index.html.erb
+++ b/app/views/sos_hands/index.html.erb
@@ -12,7 +12,7 @@
   <%# Modal Sos Hand %>
   <% if policy(SosHand).new? %>
     <div class="modal fade" id="ModalSosHand" tabindex="-1" role="dialog" aria-labelledby="ModalSosHand" aria-hidden="true">
-      <%= render 'ppsps/modal_sos_hand' %>
+      <%= render 'modals/sos_hands/modal_sos_hand' %>
     </div>
   <% end %>
   <div class="container-database">
