--- a/app/views/workers/index.html.erb
+++ b/app/views/workers/index.html.erb
@@ -12,7 +12,7 @@
   <%# Modal worker %>
   <% if policy(Worker).new? %>
     <div class="modal fade" id="ModalWorker" tabindex="-1" role="dialog" aria-labelledby="ModalWorker" aria-hidden="true">
-      <%= render 'ppsps/modal_worker' %>
+      <%= render 'modals/workers/modal_worker' %>
     </div>
   <% end %>
   <div class="container-database">
