--- a/app/views/deminings/_form.html.erb
+++ b/app/views/deminings/_form.html.erb
@@ -2,9 +2,5 @@
   <%= f.input :name, label: 'Nom' %>
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
-  <% if params[:action] == 'new' || params[:action] == 'index' %>
-    <%= f.submit 'Créer un centre de déminage', class: 'btn-blue', id: "DeminingBtn" %>
-  <% else %>
-    <%= f.submit 'Modifier ce centre de démninage', class: 'btn-blue', id: "DeminingBtn" %>
-  <% end %>
+  <%= f.submit 'Ajouter', class: 'btn-blue', id: "DeminingBtn" %>
 <% end %>
