--- a/app/views/direccts/_form.html.erb
+++ b/app/views/direccts/_form.html.erb
@@ -2,9 +2,5 @@
   <%= f.input :address, label: 'Adresse'%>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :fax, label: 'Fax' %>
-  <% if params[:action] == 'new' || params[:action] == 'index' %>
-    <%= f.submit 'Créer un DIRECCT', class: 'btn-blue', id: "DirecctBtn" %>
-  <% else %>
-    <%= f.submit 'Modifier ce DIRECCT', class: 'btn-blue', id: "DirecctBtn" %>
-  <% end %>
+  <%= f.submit 'Ajouter', class: 'btn-blue', id: "DirecctBtn" %>
 <% end %>
