--- a/app/views/security_coordinators/_form.html.erb
+++ b/app/views/security_coordinators/_form.html.erb
@@ -4,9 +4,5 @@
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :email, label: 'Email' %>
-  <% if params[:action] == 'new' || params[:action] == 'index' %>
-    <%= f.submit 'Créer un coordinateur', class: 'btn-blue', id: "SecurityBtn" %>
-  <% else %>
-    <%= f.submit 'Modifier ce coordinateur', class: 'btn-blue', id: "SecurityBtn" %>
-  <% end %>
+  <%= f.submit 'Ajouter', class: 'btn-blue', id: "SecurityBtn" %>
 <% end %>
