--- a/app/views/work_medecines/_form.html.erb
+++ b/app/views/work_medecines/_form.html.erb
@@ -2,9 +2,5 @@
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :fax, label: 'Fax' %>
-  <% if params[:action] == 'new' || params[:action] == 'index' %>
-    <%= f.submit 'Créer un nouveau', class: 'btn-blue', id: "WorkMedecineBtn" %>
-  <% else %>
-    <%= f.submit 'Modifier', class: 'btn-blue', id: "WorkMedecineBtn" %>
-  <% end %>
+  <%= f.submit 'Ajouter', class: 'btn-blue', id: "WorkMedecineBtn" %>
 <% end %>
